Adding info to readme about how to the need for gcloud auth and how to work around sbt test failures